--- a/pipelines/incubator/validate-active-stack-task.yaml
+++ b/pipelines/incubator/validate-active-stack-task.yaml
@@ -45,7 +45,8 @@ spec:
 
         # For version get everything after last `:`
         VERSION="${STACK##*:}"
-        echo "VERSION in $APPSODY_CONFIG = $VERSION"
+        echo "In $APPSODY_CONFIG... "
+        echo "VERSION = $VERSION"
 
         # For project stack get everything before the last `:`
         PROJECT_STACK="${STACK%:*}"
@@ -68,7 +69,7 @@ spec:
         # If the host wasn't specified, default to docker.io; if only specified in appsody-cfg.yaml use that
         # If it's in the config map use that and should match with what's in appsody-cfg.yaml
         if [ -z "$IMAGE_REGISTRY_HOST" ]; then
-            if [ -z "$REPO" ]; then
+            if [ -z "$STACK_REGISTRY" ]; then
               IMAGE_REGISTRY_HOST="docker.io"
             else
               IMAGE_REGISTRY_HOST=$STACK_REGISTRY
@@ -91,7 +92,8 @@ spec:
 
         # Check if the project names in the cfg file and active stack match
         CLUSTER_STACK_IMAGE=$( kubectl get stack $STACK_NAME  -o json | jq -r '.status.versions[].images[].image?' ) 
-        echo "CLUSTER_STACK_IMAGE in the cluster is $CLUSTER_STACK_IMAGE"
+        echo "In the cluster..."
+        echo "CLUSTER_STACK_IMAGE is $CLUSTER_STACK_IMAGE"
 
         # The stack name could be after the 2nd or 3rd `/` based on appsody version. Check after 3rd first
         THIRD_ENTRY="$(echo $CLUSTER_STACK_IMAGE | cut -d'/' -f3 )"
