--- a/pipelines/incubator/build-deploy-pl.yaml
+++ b/pipelines/incubator/build-deploy-pl.yaml
@@ -24,6 +24,19 @@ spec:
       inputs:
       - name: git-source
         resource: git-source
+  - name: imagename-lowercase-task
+    taskRef:
+      name: StackId-imagename-lowercase-task
+    runAfter: [validate-stack-task]
+    resources:
+      inputs:
+      - name: git-source
+        resource: git-source
+      - name: docker-image
+        resource: docker-image
+      outputs:
+      - name: git-source
+        resource: git-source
   - name: build-push-task
     taskRef:
       name: StackId-build-push-task
@@ -32,6 +45,7 @@ spec:
       inputs:
       - name: git-source
         resource: git-source
+        from: [imagename-lowercase-task]
       outputs:
       - name: docker-image
         resource: docker-image
