--- a/pipelines/incubator/build-push-jk-pl.yaml
+++ b/pipelines/incubator/build-push-jk-pl.yaml
@@ -4,6 +4,10 @@ kind: Pipeline
 metadata:
   name: StackId-build-push-jk-pl
 spec:
+  params:
+    - name: lowercase_usecase
+      type: string
+      default: jenkins
   resources:
     - name: git-source
       type: git
@@ -17,6 +21,22 @@ spec:
         inputs:
         - name: git-source
           resource: git-source
+    - name: imagename-lowercase-task
+      taskRef:
+        name: StackId-imagename-lowercase-task
+      runAfter: [validate-stack-task]
+      params:
+        - name: lowercase_usecase
+          value: "$(params.lowercase_usecase)"
+      resources:
+        inputs:
+        - name: git-source
+          resource: git-source
+        - name: docker-image
+          resource: docker-image
+        outputs:
+        - name: git-source
+          resource: git-source
     - name: build-push-task
       taskRef:
         name: StackId-build-push-jk-task
@@ -25,6 +45,7 @@ spec:
         inputs:
         - name: git-source
           resource: git-source
+          from: [imagename-lowercase-task]
         outputs:
         - name: docker-image
           resource: docker-image
