--- a/pipelines/incubator/image-scan-task.yaml
+++ b/pipelines/incubator/image-scan-task.yaml
@@ -29,46 +29,6 @@ spec:
         description: The scanner's XCCDF or OVAL file 
         default: /usr/local/share/openscap/cpe/openscap-cpe-oval.xml
   steps:
-    - name: imagename-lowercase
-      securityContext:
-        privileged: true
-      image: appsody/appsody-buildah:0.5.8-buildah1.9.0
-      command: ["/bin/bash"]
-      args:
-        - -c
-        - |
-          #logic to make docker image image_name as lowercase
-          #example input docker-image-url=image-registry.openshift-image-registry.svc:5000/kabanero/appsodyMPversion:abcDEF
-          # Then output should be = image-registry.openshift-image-registry.svc:5000/kabanero/appsodympversion:abcDEF
-        
-          echo "INPUTS_RESOURCE_DOCKER_IMAGE_URL=\$( echo \$(inputs.resources.docker-image.url) ) " > imageurl_imagename_lowercase.sh
-          
-          # we cut the string with last occurance of '/' to get image name and tag as secondHalf of URL
-          echo "firstHalfURL=\$(echo \$INPUTS_RESOURCE_DOCKER_IMAGE_URL | rev | cut -d\"/\" -f2- | rev)"  >> imageurl_imagename_lowercase.sh
-          echo "secondHalfURL=\$(echo \$INPUTS_RESOURCE_DOCKER_IMAGE_URL | rev | cut -d\"/\" -f1 | rev)" >>  imageurl_imagename_lowercase.sh
-          
-          #Conditional check if ':' is present in 'secondHalfURL'. 
-          #for ex - secondHalfURL=appsodympversion:abcDEF
-          echo "if [[ \$secondHalfURL == *\":\"* ]]; then" >> imageurl_imagename_lowercase.sh
-          echo "  imagename=\$(cut -d ':' -f 1 <<< \"\$secondHalfURL\" )" >> imageurl_imagename_lowercase.sh
-          echo "  imagename_lowercase=\$(echo \$imagename |  tr '[:upper:]' '[:lower:]')" >> imageurl_imagename_lowercase.sh
-          echo "  tagname=\$(cut -d ':' -f 2- <<< \"\$secondHalfURL\" )" >> imageurl_imagename_lowercase.sh
-          echo "  OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=\$firstHalfURL/\$imagename_lowercase:\$tagname" >> imageurl_imagename_lowercase.sh
-          #conditional check for ex - secondHalfURL=appsodympversion:abcDEF
-          echo "else" >> imageurl_imagename_lowercase.sh
-          echo "  imagename=\$secondHalfURL" >> imageurl_imagename_lowercase.sh
-          echo "  imagename_lowercase=\$(echo \$imagename |  tr '[:upper:]' '[:lower:]')" >> imageurl_imagename_lowercase.sh
-          echo "  OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=\$firstHalfURL/\$imagename_lowercase" >> imageurl_imagename_lowercase.sh
-          echo "fi" >> imageurl_imagename_lowercase.sh 
-          echo "echo \"\$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE\" " >>  imageurl_imagename_lowercase.sh
-      
-          chmod 755 imageurl_imagename_lowercase.sh
-      env:
-      - name: gitsource
-        value: git-source
-      volumeMounts:
-      - mountPath: /var/lib/containers
-        name: varlibcontainers
     - name: mount-image          
       securityContext:
         privileged: true
@@ -79,7 +39,13 @@ spec:
       args:
         - -c
         - |
-          INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( echo $( /workspace/imageurl_imagename_lowercase.sh ) )
+          INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /workspace/$gitsource/imageurl_imagename_lowercase.sh )
+          retVal=$?
+          if [ $retVal -ne 0 ]
+          then
+             echo "The script failed(/workspace/$gitsource/imageurl_imagename_lowercase.sh) Reason: $INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+             exit $retVal
+          fi
           echo "INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
  
           echo "Pulling image docker://$INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
@@ -115,7 +81,13 @@ spec:
           imageid=$(cat /var/lib/containers/imageid.txt)
           imageDir=/var/lib/containers/merged
 
-          INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( echo $( /workspace/imageurl_imagename_lowercase.sh ) )
+          INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /workspace/$gitsource/imageurl_imagename_lowercase.sh )
+          retVal=$?
+          if [ $retVal -ne 0 ]
+          then
+             echo "The script failed(/workspace/$gitsource/imageurl_imagename_lowercase.sh) Reason: $INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+             exit $retVal
+          fi
           echo "INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
 
           outputDir=/workspace/scans/$(inputs.params.scansDir)/$INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE/$imageid
@@ -144,6 +116,9 @@ spec:
           echo "********** START OF report.html **********"
           cat $outputDir/report.html
           echo "********** END OF report.html ************"
+      env:
+        - name: gitsource
+          value: git-source
       volumeMounts:
         - name: host-save-dir
           mountPath: /workspace/scans
