--- a/pipelines/incubator/build-deploy-pl-tr.yaml
+++ b/pipelines/incubator/build-deploy-pl-tr.yaml
@@ -10,8 +10,10 @@ spec:
     value: $(body.pull_request.head.sha)
   - name: gitrepositoryurl
     value: $(body.repository.clone_url)
-  - name: docker-tag
-    value: $(body.repository.name):$(body.pull_request.head.sha)
+  - name: docker-imagename
+    value: $(body.repository.name)
+  - name: docker-imagetag
+    value: $(body.pull_request.head.sha)
   - name: event-type
     value: $(header.X-Github-Event)
   - name: webhooks-tekton-git-branch
@@ -28,8 +30,10 @@ spec:
     value: $(body.head_commit.id)
   - name: gitrepositoryurl
     value: $(body.repository.clone_url)
-  - name: docker-tag
-    value: $(body.repository.name):$(body.head_commit.id)
+  - name: docker-imagename
+    value: $(body.repository.name)
+  - name: docker-imagetag
+    value: $(body.head_commit.id)    
   - name: event-type
     value: $(header.X-Github-Event)
   - name: event-ref
@@ -62,8 +66,10 @@ spec:
     description: The Git event type
   - name: webhooks-tekton-docker-registry
     description: The image registry
-  - name: docker-tag
-    description: The image tag
+  - name: docker-imagename
+    description: The docker image name
+  - name: docker-imagetag
+    description: The docker image tag
   - name: webhooks-tekton-service-account
     description: The ServiceAccount that the PipelineRun will execute under
   - name: webhooks-tekton-target-namespace
@@ -90,7 +96,7 @@ spec:
       type: image
       params:
       - name: url
-        value: $(params.webhooks-tekton-docker-registry)/$(params.docker-tag)
+        value: $(params.webhooks-tekton-docker-registry)
   - apiVersion: tekton.dev/v1alpha1
     kind: PipelineRun
     metadata:
@@ -110,6 +116,10 @@ spec:
         value: $(params.event-type)
       - name: event-ref
         value: $(params.event-ref)
+      - name: docker-imagename
+        value: $(params.docker-imagename)
+      - name: docker-imagetag
+        value: $(params.docker-imagetag)
       resources:
       - name: git-source
         resourceRef:
