--- a/pipelines/incubator/build-pl.yaml
+++ b/pipelines/incubator/build-pl.yaml
@@ -4,6 +4,11 @@ kind: Pipeline
 metadata:
   name: StackId-build-pl
 spec:
+  params:
+    - name: docker-imagename
+      type: string
+    - name: docker-imagetag
+      type: string
   resources:
     - name: git-source
       type: git
@@ -17,14 +22,33 @@ spec:
         inputs:
         - name: git-source
           resource: git-source
-    - name: build-task
+    - name: imagename-lowercase-task
       taskRef:
-        name: StackId-build-task
+        name: StackId-imagename-lowercase-task
       runAfter: [validate-stack-task]
+      params:
+        - name: docker-imagename
+          value: "$(params.docker-imagename)"
+        - name: docker-imagetag
+          value: "$(params.docker-imagetag)"
       resources:
         inputs:
         - name: git-source
           resource: git-source
+        - name: docker-image
+          resource: docker-image
+        outputs:
+        - name: git-source
+          resource: git-source
+    - name: build-task
+      taskRef:
+        name: StackId-build-task
+      runAfter: [imagename-lowercase-task]
+      resources:
+        inputs:
+        - name: git-source
+          resource: git-source
+          from: [imagename-lowercase-task]
         outputs:
         - name: docker-image
           resource: docker-image
