--- a/pipelines/incubator/build-push-jk-pl-tr.yaml
+++ b/pipelines/incubator/build-push-jk-pl-tr.yaml
@@ -10,8 +10,10 @@ spec:
     value: $(body.pull_request.head.sha)
   - name: gitrepositoryurl
     value: $(body.repository.clone_url)
-  - name: docker-tag
-    value: $(body.repository.name):$(body.pull_request.head.sha)
+  - name: docker-imagename
+    value: $(body.repository.name)
+  - name: docker-imagetag
+    value: $(body.pull_request.head.sha)
   - name: event-type
     value: $(header.X-Github-Event)
   - name: webhooks-tekton-git-branch
@@ -28,8 +30,10 @@ spec:
     value: $(body.head_commit.id)
   - name: gitrepositoryurl
     value: $(body.repository.clone_url)
-  - name: docker-tag
-    value: $(body.repository.name):$(body.head_commit.id)
+  - name: docker-imagename
+    value: $(body.repository.name)
+  - name: docker-imagetag
+    value: $(body.head_commit.id)
   - name: event-type
     value: $(header.X-Github-Event)
   - name: webhooks-tekton-git-branch
@@ -60,8 +64,10 @@ spec:
     description: The Git event type
   - name: webhooks-tekton-docker-registry
     description: The image registry
-  - name: docker-tag
-    description: The image tag
+  - name: docker-imagename
+    description: The docker image name
+  - name: docker-imagetag
+    description: The docker image tag
   - name: webhooks-tekton-service-account
     description: The ServiceAccount that the PipelineRun will execute under
   - name: webhooks-tekton-target-namespace
@@ -105,7 +111,11 @@ spec:
         name: StackId-build-push-jk-pl
       params:
       - name: event-type
-        value: $(params.event-type)
+        value: ""
+      - name: docker-imagename
+        value: $(params.docker-imagename)
+      - name: docker-imagetag
+        value: ""
       resources:
       - name: git-source
         resourceRef:
