--- a/pipelines/incubator/dockerimage-name-lowercase-task.yaml
+++ b/pipelines/incubator/dockerimage-name-lowercase-task.yaml
@@ -46,7 +46,7 @@ spec:
         app_deploy_filename="app-deploy.yaml"
 
         if [[ -z "$docker_registry_url" ]]; then
-           echo "The input parameter docker-image resource url to the script is empty, please provide it and try again(Possible value example: docker.io/<docker-userid>, image-registry.openshift-image-registry.svc:5000/kabanero)"
+           echo "Error : The input parameter docker-image resource url to the script is empty, please provide it and try again(Possible value example: docker.io/<docker-userid>, image-registry.openshift-image-registry.svc:5000/kabanero)"
            exit 1
         else
            if [[ -z "$docker_imagename"  ]]; then
@@ -56,8 +56,13 @@ spec:
 
                  docker_imagename_lowercase=$(echo $APPNAME |  tr '[:upper:]' '[:lower:]')
               else
-                 echo "docker_imagename is empty and the $app_deploy_filename is not present in the github appsody project. Either provide the value for the variable or make the $app_deploy_filename file available in the github appsody project"
-                 echo "(Hint: Check the pipeline trigger file passing the input parameter docker_imagename to the pipelines)"
+                 echo "Error : docker_imagename is empty and the $app_deploy_filename is not present in the github appsody project.
+                 Either provide the value for the variable or make the $app_deploy_filename file available in the github appsody project
+                 Case 1: If you are running a pipeline where you do not want the docker imagename to be coming from 'app-deploy.yaml' ,
+                         you would need to provide the imagename from the Trigger file.
+                         (Hint: Check the pipeline trigger file passing the input parameter 'docker_imagename' to the pipelines)
+                 Case 2: If your requirement is to pull the imagename from the  'app-deploy.yaml' file variable 'name' , 
+                         then you need to make sure that you have the file available in the appsody project in github whose url you have provided as git-source to the pipeline"
                  exit 1                 
               fi
            else
@@ -66,12 +71,12 @@ spec:
         fi
 
           #If it reaches here it means it has set the variable docker_imagename_lowercase correctly.
-          if [[ ! -z "$docker_imagetag" ]]; then
-              DOCKER_IMAGE_URL=$docker_registry_url/$docker_imagename_lowercase:$docker_imagetag
-          else
-              DOCKER_IMAGE_URL=$docker_registry_url/$docker_imagename_lowercase
-          fi
-          echo "$DOCKER_IMAGE_URL"
+        if [[ ! -z "$docker_imagetag" ]]; then
+            DOCKER_IMAGE_URL=$docker_registry_url/$docker_imagename_lowercase:$docker_imagetag
+        else
+            DOCKER_IMAGE_URL=$docker_registry_url/$docker_imagename_lowercase
+        fi
+        echo "$DOCKER_IMAGE_URL"
           
         EOF
         chmod 755 imageurl_imagename_lowercase.sh
