--- a/pipelines/incubator/build-push-task.yaml
+++ b/pipelines/incubator/build-push-task.yaml
@@ -69,15 +69,20 @@ spec:
         then
             echo "DEFAULT_STACK_IMAGE_REGISTRY_SECRET_USERNAME or DEFAULT_STACK_IMAGE_REGISTRY_SECRET_PASSWORD is empty.  Assumption is authentication to the registry is not required."
 
-            echo "HOST=$STACK_IMAGE_REGISTRY_URL" > cert-creation.sh
-            echo "sudo mkdir -p /etc/docker/certs.d/\${HOST}" >> cert-creation.sh
-            echo "openssl s_client -connect \${HOST} -servername \${HOST} 2>/dev/null </dev/null | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/docker/certs.d/\${HOST}/ca.crt" >> cert-creation.sh
+            if [[ "$STACK_IMAGE_REGISTRY_URL" == *"$internal_stack_registry_string"*  ]];then
+               echo "Creating the certificate for STACK_IMAGE_REGISTRY_URL=$STACK_IMAGE_REGISTRY_URL"
+               #Creating a cert for the internal image registry url
+               echo "The STACK_IMAGE_REGISTRY_URL is internal registry =$STACK_IMAGE_REGISTRY_URL"
+               echo "HOST=$STACK_IMAGE_REGISTRY_URL" > cert-creation.sh
+               echo "sudo mkdir -p /etc/docker/certs.d/\${HOST}" >> cert-creation.sh
+               echo "openssl s_client -connect \${HOST} -servername \${HOST} 2>/dev/null </dev/null | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/docker/certs.d/\${HOST}/ca.crt" >> cert-creation.sh
 
-            chmod 755 cert-creation.sh
-            ./cert-creation.sh        
+               chmod 755 cert-creation.sh
+               ./cert-creation.sh
+            fi
         else
             echo "Secrets are provided to login to stack registry"
-            
+            echo "Creating the certificate for STACK_IMAGE_REGISTRY_URL=$STACK_IMAGE_REGISTRY_URL"
             #Creating a cert for authentication of buildah login of the DEFAULT_STACK_IMAGE_REGISTRY_URL registry url
             echo "HOST=$STACK_IMAGE_REGISTRY_URL" > cert-creation.sh
             echo "sudo mkdir -p /etc/docker/certs.d/\${HOST}" >> cert-creation.sh
@@ -107,6 +112,8 @@ spec:
     env:
     - name: gitsource
       value: git-source
+    - name: internal_stack_registry_string
+      value: image-registry.openshift-image-registry.svc:5000
     - name: DEFAULT_STACK_IMAGE_REGISTRY_URL
       valueFrom:
         configMapKeyRef:
